some design have changed

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             <br><br>
             <div class="projects">
                 <ol>
-                    <li>Bank Account Management</li>
-                    <li>Details of all countries</li>
-                    <li>Portfolio </li>
+                    <li class="project">Bank Account Management</li>
+                    <li class="project">Details of all countries</li>
+                    <li class="project">Portfolio </li>
                 </ol>
             </div>
             
